--- a/frontend/agileplanner/src/Schedule.css
+++ b/frontend/agileplanner/src/Schedule.css
@@ -20,7 +20,8 @@
     display: flex;
     flex-direction: column;
     grid-area: a;
-    background-color: blue;
+    background-color: #ffffff;
+    margin-right: 7px;
     }
 }
 
@@ -29,7 +30,8 @@
     display: flex;
     flex-direction: column;
     grid-area: b;
-    background-color: red;
+    background-color: #ffffff;
+    margin-left: 7px;
     }
 }
 
