--- a/frontend/agileplanner/src/AnalyticsUi.css
+++ b/frontend/agileplanner/src/AnalyticsUi.css
@@ -7,6 +7,11 @@ margin: 10px;
 border-radius: 20px 20px 20px 20px;
 border: solid grey; */
 
+.cycle-task-area{
+    display: flex;
+    flex-direction: column;
+}
+
 .AnalyticsUiContainer{
     display: flex;
     /* border: solid; */
@@ -25,6 +30,8 @@ border: solid grey; */
     margin: 10px;
     border-radius: 20px 20px 20px 20px;
     border: solid grey;
+    justify-content: center;
+    align-items: center;
 }
 
 .AnalyticsUi-button-container{
