--- a/frontend/agileplanner/src/pages/Layout.css
+++ b/frontend/agileplanner/src/pages/Layout.css
@@ -66,7 +66,7 @@
 .home{
     color: white;
     font-weight: bold;
-    font-size: 20px
+    font-size: 20px;
 }
 
 /* Kit -- #5e76a5 orange yellow(rgb(225, 216, 46); white  */
