--- a/frontend/agileplanner/src/Exp.css
+++ b/frontend/agileplanner/src/Exp.css
@@ -23,7 +23,7 @@
         /* width: 100%; */
         display: flex;
         flex-direction: column;
-        background-color: #06acac;
+        background-color: #3552c3;
         padding: 10px;
         /* margin: 10px; */
         border-radius: 20px 20px 20px 20px;
