--- a/frontend/agileplanner/src/Schedule.css
+++ b/frontend/agileplanner/src/Schedule.css
@@ -133,11 +133,12 @@
     /* width: 100%; */
     background-color: hsl(215, 74%, 93%);
     padding: 10px;
-    height: 10vh;
+    height: 5vh;
     /* background-color: rgba(249, 180, 140, 0.674); */
     margin: 10px;
     border-radius: 20px 20px 20px 20px;
     border: solid grey; 
+    /* width: 50vw; */
     }
 }
 
@@ -152,14 +153,17 @@
         /* background-color: rgba(249, 180, 140, 0.674); */
         /* margin: 2px; */
         height: 5vh;
-        border-radius: 20px 20px 20px 20px;
+        width: 16vw;
+        /* border-radius: 20px 20px 20px 20px; */
         border: solid grey; 
+        align-self: center;
         }
     }
 
 @media (max-width: 428px) {
 .Container-Actual{
     display: flex;
+    background-color: #07b8f3;
     }
 }
 
@@ -178,15 +182,17 @@
     }
 }
 
+/* actual */
 @media (min-width: 1400px){
 textarea{
     background-color: hsl(215, 64%, 84%);
-    border-radius: 20px 20px 20px 20px;
+    /* border-radius: 20px 10px 10px 10px; */
     border: solid grey; 
     font-family: PlaywriteITModerna-VariableFont_wght;
     }
 }
 
+/* actual */
 @media (max-width: 428px){
 textarea{
     background-color: hsl(215, 64%, 84%);
@@ -196,7 +202,8 @@ textarea{
     border-radius: 20px 20px 20px 20px;
     border: solid grey; 
     font-family: PlaywriteITModerna-VariableFont_wght;
-    width: 90%;
+    width: 50vw;
+    height: 4vh;
     }
 }
 
@@ -205,7 +212,8 @@ textarea{
     display: flex;
     justify-content: flex-start;
     flex-direction: row;
-    align-items: center;
+    /* align-items: center; */
+    align-self: center;
     /* font-size: 14px; */
     font-size: 20px;
     font-family: PlaywriteITModerna-VariableFont_wght;
